initial pl pages

--- a/en/resume.html
+++ b/en/resume.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Piotr Wasilewski GitHub</title>
+        <title>Piotr Wasilewski - GitHub</title>
 
          <!-- Bootstrap CSS CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- Our Custom CSS -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
 		
@@ -32,9 +32,17 @@
 				<a class="nav-link" href="index.html#contact">CONTACT</a>
 			  </li>
 			</ul>
+			<ul class="navbar-nav ml-auto">
+			  <li class="nav-item">
+				<a class="nav-link" href="resume.html">PL</a>
+			  </li>
+			   <li class="nav-item">
+				<a class="nav-link" href="../eng/resume.html">EN</a>
+			  </li>
+			</ul>
 		</div>
 		</nav>
-        <div class = "row justify-content-center">    
+        <div class = "row frst justify-content-center">    
 			<div class ="col-md-2"></div>
 			<div class ="col-md-8">
 				<h2 style="margin-bottom:1rem">Work experience</h2>
@@ -44,30 +52,44 @@
 					<h6 class="text-muted">April 2018 - Now</h6>
 				  </div>
 				  <div class="card-body">
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<p class="card-text">Part of Incubation team focused on Microsoft's process creation & development until transition to Ops - 
+					  <a class="text-white" href="http://www.liquidhub.com/partners/microsoft-services.html"><i>liquidhub.com/partners/microsoft-services.</i></a>
+					  <ul>
+					    <li>Process owner of database deduplication based on Fuzzy Grouping approach, using T-SQL & ETL (SSIS).</li>
+						<li>Business rules definition & UAT management of portal used for sales & inventory reporting by Microsoft’s partners.</li>
+					  </ul></p>
 				  </div>
 				</div>
-				<div class="card text-white bg-light mb-3">
+				<div class="card bg-light mb-3">
 				  <div class="card-header">
 				    <h4>Data Analyst @GE Transportation</h4>
 					<h6 class="text-muted">January 2017 - April 2018</h6>
 				  </div>
 				  <div class="card-body">
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<ul class="card-text">
+					  <li>KPI owner of fundamental metric used during contract evaluation, commercial action preparation and projection modelling. </li>
+					  <li>CMR admin responsible for management of project preparation for a team of 20.</li>
+					  <li>Automation using R/SQL/VBA, diagnostic analytics, scripts & tools creation including MonteCarlo simulation, performing UATs.</li>
+					  <li>Statistical analysis, life and cost predicition using Weibull, CROW and Constant Rate probability distributions.</li>
+					</ul>
 				  </div>
 				</div>
-				<div class="card text-white bg-light mb-3">
+				<div class="card bg-light mb-3">
 				  <div class="card-header">
 				    <h4>Engineering Apprentice @GE Aviation</h4>
 					<h6 class="text-muted">July 2016 - December 2016</h6>
 				  </div>
 				  <div class="card-body">
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <ul class="card-text">
+					    <li>Continuous Monitoring tool development in VBA/MiniTab/PowerPoint.</li>
+						<li>Statistical analysis, life and cost predicition of CF34 & CFM56 fleets, using Weibull probability distribution.</li>
+						<li>Research and preliminary analysis of new modeling methods.</li>
+					  </ul>
 				  </div>
 				</div>
 				<div class="card text-white bg-light mb-3">
 				  <div class="card-header">
-				    <h4>Data Analyst @Mercer</h4>
+				    <h4>Junior Analyst @Mercer</h4>
 					<h6 class="text-muted">April 2016 - June 2016</h6>
 				  </div>
 				  <div class="card-body">
