--- a/pl/index.html
+++ b/pl/index.html
@@ -36,7 +36,7 @@
 				<a class="nav-link" href="index.html">PL</a>
 			  </li>
 			   <li class="nav-item">
-				<a class="nav-link" href="../en/project.html">EN</a>
+				<a class="nav-link" href="../en/index.html">EN</a>
 			  </li>
 			</ul>
 		</div>
