pl pages - descriptions

--- a/pl/resume.html
+++ b/pl/resume.html
@@ -66,10 +66,11 @@
 					<h6 class="text-muted">Styczeń 2017 - Kwiecień 2018</h6>
 				  </div>
 				  <div class="card-body">
+				  <p class="card-text">Członek zespołu Automation&Analytics zajmującego się niezawodnością lokomotyw General Electric.</p>
 					<ul class="card-text">
 					  <li>KPI owner metryki będącej podstawą ewaluacji kontraktów, przygotowania aneksów oraz modelowania projekcji.</li>
 					  <li>CMR admin odpowiedzialny za przygotowanie danych oraz założeń dla 20-osobowego zespołu.</li>
-					  <li>Automatyzacja przy użyciu R/SQL/VBA, analityka diagnostyczna, tworzenie skryptów i narzędzi, włączając w to symulację MonteCarlo oraz wykonywanie UAT.</li>
+					  <li>Automatyzacja przy użyciu R/SQL/VBA, analityka diagnostyczna, tworzenie skryptów i narzędzi (min. symulacji MonteCarlo) oraz wykonywanie UAT.</li>
 					  <li>Analiza statystyczna, przewidywanie czasu oraz kosztów życia części przy użyciu rachunku prawdopodobieństwa Weibulla, CROW, Constant Rate.</li>
 					</ul>
 				  </div>
@@ -105,7 +106,8 @@
 					<h6 class="text-muted">Sierpień 2014 - Sierpień 2014</h6>
 				  </div>
 				</div>
-				<h2 style="margin-top:2rem;margin-bottom:1rem">Wykształcenie i kursy</h2>
+				
+				<h2 style="margin-top:3rem;margin-bottom:1rem">Wykształcenie i kursy</h2>
 				<div class="card text-white bg-dark mb-3">
 				  <div class="card-header">
 				    <h4 class="text-white">Inżynier @Wydział Mechaniczny Energetyki i Lotnictwa</h4>
@@ -139,6 +141,11 @@
 			</div>
 			<div class ="col-md-2"></div>
 		</div>
+		
+		<footer class="page-footer w-100 bg-dark" style="margin-top:2rem;text-align:center;">
+		&copy; Copyright 2018 Piotr Wasilewski
+		</footer>
+		
         <!-- jQuery CDN -->
          <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
          <!-- Bootstrap Js CDN -->
