--- a/pl/index.html
+++ b/pl/index.html
@@ -46,7 +46,7 @@
 			<div class ="col-md-8">
 				<h2 style="margin-bottom:1rem">Do rzeczy</h2>
 				<div class="row" style="margin-left:0">
-				<div class="col-md-8" style="text-align: justify; margin-bottom:2rem;padding-left:0;">
+				<div class="col-md-8" style="text-align: justify; padding-left:0; margin-bottom:1rem;">
 				<p>Heja!
 				<p>GitHub Pages mają za zadanie przedstawić moje 'weekendowe projekty', które uważałem za przyjemne i/lub interesujące.
 				Tworzenie wstępnego projektu traktuję jak rozwiązywanie zagadek i to na tą część poświęcam najwięcej czasu. Dopracowane szczegóły uważam za znacznie mniej wartościowe niż ogólny pomysł i zarys,
@@ -60,6 +60,13 @@
 				<div class="col-md-4" >
 				<img style="width:100%;" src="../value.png"/>
 				<p style="text-align: center">Moje 2-minutowe dzieło!</p></div></div>
+				
+				<div class="alert alert-dismissible alert-warning" style="margin-bottom:3rem;">
+				  <button type="button" class="close" data-dismiss="alert">&times;</button>
+				  <h4 class="alert-heading">Uwaga!</h4>
+				  <p class="mb-0">Strona ta nie jest i nie będzie przystosowana do oglądania na urządzeniach mobilnych.</p>
+				</div>
+				
 				<h2 id = "contact" style="margin-bottom:1rem">Kontakt</h2>
 				<div class="contactbg">
 				 <form class="gform" method="POST" style="width:50%" action="https://script.google.com/macros/s/AKfycbx1_JavIuUpSBxEwBEGW1yIhB3XBadF2jLVnjuQr6EemiTXxzjy/exec">
@@ -90,6 +97,11 @@
 			</div>
 			<div class ="col-md-2"></div>
 		</div>
+		
+		<footer class="page-footer w-100 bg-dark" style="margin-top:2rem;text-align:center;">
+		&copy; Copyright 2018 Piotr Wasilewski
+		</footer>
+		
 		<!-- form JS -->
 		<script data-cfasync="false" type="text/javascript" src="../form-submission-handler.js"></script>
         <!-- jQuery CDN -->
