--- a/pl/project.html
+++ b/pl/project.html
@@ -97,7 +97,7 @@
 					    <li>mediana - środkowa kreska, środkowa wartość z danych, cena "średniaka" z tego roku</li>
 						<li>trzeci kwartyl - górna kreska, 75% cen jest niższych od tej wartości, cena ładnego i zadbanego egzemplarza</li>
 						<li>pierwszy kwartyl - dolna kreska, 25% cen jest niższych od tej wartości, cena stosunkowo zaniedbanego egzemlarza</li>
-						<li>wąsy - między tymi wartościami znajduje się większość wartości, pozostałe są podejrzane</li>
+						<li>wąsy - między tymi wartościami znajduje się większość wartości, pozostałe mogą być błędne</li>
 						<li>punkty odstające - podejrzane ceny, auta powypadkowe, cesje leasingu, specjalne edycje itp.</li>
 					  </ul>
 					  <img style="width:100%;" src="../boxplot.png"/>
