--- a/en/resume.html
+++ b/en/resume.html
@@ -15,29 +15,29 @@
     <body>
 		
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		  <a class="navbar-brand" href="#">Piotr Wasilewski</a>
+		  <a class="navbar-brand" href="index.html">Piotr Wasilewski</a>
 		
 		<div class="collapse navbar-collapse" id="navbarColor01">  
 			<ul class="navbar-nav mr-auto" data-toggle="popover">
 			  <li class="nav-item">
-				<a class="nav-link" href="index.html">HOME</a>
+				<a class="nav-link" href="index.html">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link active" href="resume.html">résumé</a>
+				<a class="nav-link active" href="resume.html">Résumé</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="project.html">PROJECT</a>
+				<a class="nav-link" href="project.html">Project</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="index.html#contact">CONTACT</a>
+				<a class="nav-link" href="index.html#contact">Contact</a>
 			  </li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-				<a class="nav-link" href="resume.html">PL</a>
+				<a class="nav-link" href="../pl/resume.html">PL</a>
 			  </li>
 			   <li class="nav-item">
-				<a class="nav-link" href="../eng/resume.html">EN</a>
+				<a class="nav-link" href="resume.html">EN</a>
 			  </li>
 			</ul>
 		</div>
@@ -66,6 +66,7 @@
 					<h6 class="text-muted">January 2017 - April 2018</h6>
 				  </div>
 				  <div class="card-body">
+				  <p class="card-text">Part of Automation&Analytics team working on reliability of locomotives made by General Electric.</p>
 					<ul class="card-text">
 					  <li>KPI owner of fundamental metric used during contract evaluation, commercial action preparation and projection modelling. </li>
 					  <li>CMR admin responsible for management of project preparation for a team of 20.</li>
@@ -92,8 +93,49 @@
 				    <h4>Junior Analyst @Mercer</h4>
 					<h6 class="text-muted">April 2016 - June 2016</h6>
 				  </div>
+				</div>
+				<div class="card bg-light mb-3">
+				  <div class="card-header">
+				    <h4>Summer Intern @GE Aviation</h4>
+					<h6 class="text-muted">September 2015 - October 2015</h6>
+				  </div>
+				</div>
+				<div class="card bg-light mb-3">
+				  <div class="card-header">
+				    <h4>Summer Intern @EADS D&S</h4>
+					<h6 class="text-muted">August 2014 - August 2014</h6>
+				  </div>
+				</div>
+				
+				<h2 style="margin-top:3rem;margin-bottom:1rem">Education & courses</h2>
+				<div class="card text-white bg-dark mb-3">
+				  <div class="card-header">
+				    <h4 class="text-white">Engineer @Faculty of Power and Aeronautical Engineering</h4>
+					<h6 class="text-muted">Warsaw University of Technology</h6>
+					<h6 class="text-muted">October 2012 - June 2016</h6>
+				  </div>
 				  <div class="card-body">
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <ul class="card-text" style="list-style:none;padding-left:0">
+					  <li>Thesis: "Landing approach automation using linear-quadratic regulator" coded in Matlab.</li>
+					  <li>Specialty: Automation and aeronautical systems</li>
+					  <li>Specialty topics: statistical analysis, avionics, C/Matlab/Simulink programming</li>
+					  <li>General topics: mechanics, fluid mechanics, engine & aircraft design, termodynamics, strenght and design of machines.</li>
+					  </ul>
+				  </div>
+				</div>
+				<div class="card bg-light mb-3">
+				  <div class="card-header">
+				    <h4>Data Scientist with R @DataCamp</h4>
+					<h6 class="text-muted">October 2017</h6>
+				  </div>
+				  <div class="card-body">
+				    95-hour course on statistical analysis and machine learning with R
+				  </div>
+				</div>
+				<div class="card bg-light mb-3">
+				  <div class="card-header">
+				    <h4>DMAIC Six Sigma @General Electric</h4>
+					<h6 class="text-muted">September 2017</h6>
 				  </div>
 				</div>
 			</div>
