--- a/en/project.html
+++ b/en/project.html
@@ -46,7 +46,8 @@
         <div class = "row frst justify-content-center">    
 			<div class ="col-md-2"></div>
 			<div class ="col-md-8" style="text-align: justify;">
-				<h2 style="margin-bottom:1rem">"Assemble" project</h2>
+				<h2 style="margin-bottom:0">"Assemble" project</h2>
+				<p class="text-muted" style="font-size:80%;margin-top:0.5rem; margin-bottom:1rem">~ September 2018</p>
 				<p>TLDR: "Assemble" project was meant to gather the data through webscraping and visualize it. The records describe cars being sold on polish market and include 517 models made in 899 versions.
 				Monthly data refresh is planned.</p>
 				<p>A bit more detailed description of the project can be found <a href="#desc"><i>below.</i></a></p>
