--- a/pl/project.html
+++ b/pl/project.html
@@ -11,14 +11,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- Our Custom CSS -->
         <link rel="stylesheet" href="../style.css">
-		
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script>
-		  (adsbygoogle = window.adsbygoogle || []).push({
-			google_ad_client: "ca-pub-2099496971035501",
-			enable_page_level_ads: true
-		  });
-		</script>
 
     </head>
     <body>
@@ -54,7 +46,8 @@
         <div class = "row frst justify-content-center">    
 			<div class ="col-md-2"></div>
 			<div class ="col-md-8" style="text-align: justify;">
-				<h2 style="margin-bottom:1rem">Projekt "Assemble"</h2>
+				<h2 style="margin-bottom:0">Projekt "Assemble"</h2>
+				<p class="text-muted" style="font-size:80%;margin-top:0.5rem; margin-bottom:1rem">~ Wrzesień 2018</p>
 				<p>TLDR: Projekt "Assemble" polegał na uzyskaniu danych poprzez webscraping i ich wizualizacji. Zebrane informacje dotyczą samochodów będących w sprzedaży na rynku polskim i obejmują 517 modeli samochodów występujących w 899 wersjach.
 				Odświeżanie analizy planuję wykonywać raz w miesiącu.</p>
 				<p>Odrobinę bardziej szczegółowy opis projektu możesz znaleźć <a href="#desc"><i>poniżej.</i></a></p>
