--- a/en/resume.html
+++ b/en/resume.html
@@ -141,6 +141,11 @@
 			</div>
 			<div class ="col-md-2"></div>
 		</div>
+		
+		<footer class="page-footer w-100 bg-dark" style="margin-top:2rem;text-align:center;">
+		&copy; Copyright 2018 Piotr Wasilewski
+		</footer>
+		
         <!-- jQuery CDN -->
          <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
          <!-- Bootstrap Js CDN -->
