--- a/en/project.html
+++ b/en/project.html
@@ -101,7 +101,7 @@
 					  <li>Python - webscraping and populating the database(no API used)</li>
 					  <li>Tableau Public - dashboard creation (current month only)</li>
 					</ul>
-					<h5 style="margin-top:2rem">4. Feedback & contact<</h5>
+					<h5 style="margin-top:2rem">4. Feedback & contact</h5>
 					<p>If you want to know something more, you are interested in the data itself, found a mistake or just want to talk - be sure to reach me via
 					<a href="index.html#contact">contact form</a> or directly at wasilewski.gh(at)gmail.com :)</p>
 				</div>
